# Big-Data-IC

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  ms-vscode.cmake-tools-1.5.3.vsix
app/: CMakeLists.txt
app/brute_force/: brute_force.cpp  build_brute_force.cpp
app/coletor/: coletor.cpp  data_points.cpp
app/comparator/: comparator.cpp
app/convert_stream/: convert_stream.cpp
app/ks/: experiment_ks.sh  ks.cpp
app/profiler/: profile_count_sketch.cpp  profile_dcs.cpp  profile_gk.cpp  profile_kll.cpp  profile_q_digest.cpp  profiler.cpp
app/quantile_quadtree_experiment/: .quantile_quadtree_experiment.cpp.swn  .quantile_quadtree_experiment.cpp.swo  experiment_all.cpp  experiment_qq_ks.sh  new_quantile_quadtree_experiment.cpp  quadtree_data_bounds.cpp  quantile_quadtree_experiment.cpp  quantile_quadtree_ks.cpp
app/query_creator/: build_queries.cpp  query_creator.cpp
app/stream_creator/: build_streams.cpp  stream_creator.cpp
docs/html/: _formulas.tex  aabb_8cpp_source.html  aabb_8hpp.html  aabb_8hpp_source.html  annotated.html  binary__two__wise__family_8h_source.html  bob__jenkins__hash_8h_source.html  classbinary__two__wise__family-members.html  classbinary__two__wise__family.html  classbjkst-members.html  classbjkst.html  classbob__jenkins__hash-members.html  classbob__jenkins__hash.html  classes.html  classgk-members.html  classgk.html  classgk__factory__factory.html  classkll__factory__factory.html  classmorris-members.html  classmorris.html  classmorris__p-members.html  classmorris__p.html  classmorris__pp-members.html  classmorris__pp.html  classnon__idealized__fm-members.html  classnon__idealized__fm.html  classpoint_3_01T_01_4.html  classq__digest-members.html  classq__digest.html  classqsbd_1_1aabb-members.html  classqsbd_1_1aabb.html  classqsbd_1_1configurator-members.html  classqsbd_1_1configurator.html  classqsbd_1_1count__sketch-members.html  classqsbd_1_1count__sketch.html  classqsbd_1_1dcs-members.html  classqsbd_1_1dcs.html  classqsbd_1_1dcs__factory-members.html  classqsbd_1_1dcs__factory.html  classqsbd_1_1gk-members.html  (+173 more)
docs/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_13.html  all_13.js  (+144 more)
docs/latex/: aabb_8hpp.tex  annotated.tex  classbinary__two__wise__family.tex  classbjkst.tex  classbob__jenkins__hash.tex  classgk.tex  classgk__factory__factory.tex  classkll__factory__factory.tex  classmorris.tex  classmorris__p.tex  classmorris__pp.tex  classnon__idealized__fm.tex  classpoint_3_01T_01_4.tex  classq__digest.tex  classqsbd_1_1aabb.tex  classqsbd_1_1configurator.tex  classqsbd_1_1count__sketch.tex  classqsbd_1_1dcs.eps  classqsbd_1_1dcs.tex  classqsbd_1_1dcs__factory.eps  classqsbd_1_1dcs__factory.tex  classqsbd_1_1gk.eps  classqsbd_1_1gk.tex  classqsbd_1_1gk__factory.eps  classqsbd_1_1gk__factory.tex  classqsbd_1_1k__wise__family.tex  classqsbd_1_1kll.eps  classqsbd_1_1kll.tex  classqsbd_1_1kll__factory.eps  classqsbd_1_1kll__factory.tex  classqsbd_1_1logger.eps  classqsbd_1_1logger.tex  classqsbd_1_1mem__track_1_1block__header.tex  classqsbd_1_1mem__track_1_1mem__stamp.tex  classqsbd_1_1mem__track_1_1signature.tex  classqsbd_1_1point.tex  classqsbd_1_1q__digest.eps  classqsbd_1_1q__digest.tex  classqsbd_1_1q__digest_1_1merge__error.eps  classqsbd_1_1q__digest_1_1merge__error.tex  (+45 more)
gnuplot/: boxes.p  boxplot_unique.p  compair_boxplot.p  cumullative_error.p  data_and_bounds.p  error_plot.p  errorbar.p  fast_plot.p  fast_plot_unique.p  histogram.p  p.txt  p2.txt  plot.txt  quantiles_bloxplot.p  std_plot_unique.p  std_table_plot.p  table_plot.p  trade.txt  trade_10.txt  trade_10_leaf.txt  trade_10_leaf_pretty.txt  trade_10_pretty.txt  trade_5.txt  trade_5_leaf.txt  trade_5_leaf_pretty.txt  trade_5_pretty.txt
imgs/data/: gnuplotTest.txt
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  binary_two_wise_family.h  bjkst_final_state.out  bob_jenkins_hash.h  commum_header.h  fm.cpp  fm.out  fm.out2  fm.out3  fm.out4  fm.out5  fm3.out  gk.cpp  gk.py  global_generator.h  k_wise_family.h  memory_tests.cpp  morris.cpp  morris.out  q_digest.cpp  q_digest.out  q_digest_v2.cpp  tug_of_war.cpp  tug_of_war.out2  tug_of_war.out3
src/aabb/: aabb.cpp  aabb.h  aabb.hpp
src/bd_debug/: bd_debug.h
src/bd_timer/: bd_timer.cpp  bd_timer.h
src/commum_header/: commum_header.h
src/config/: config.cpp  config.h
src/count_sketch/: count_sketch.cpp  count_sketch.h  count_sketch_malloc.cpp  count_sketch_two_wise.cpp
src/dcs/: dcs.cpp  dcs.h
src/dcs_factory/: dcs_factory.h
src/gk/: gk.hpp
src/gk_factory/: gk_factory.hpp
src/global_generator/: global_generator.cpp  global_generator.h
src/heap_tracker/: heap_tracker.hpp
src/k_wise_family/: k_wise_family.cpp  k_wise_family.h
src/kll/: kll.cpp  kll.hpp  kll.tpp
src/kll_factory/: kll_factory.hpp
src/kolmogorov_smirnov/: kolmogorov_smirnov.cpp  kolmogorov_smirnov.hpp
src/logger/: logger.cpp  logger.h
src/memory_tracker/: memory_tracker.cpp  memory_tracker.h
src/pbplots/: pbPlots.cpp  pbPlots.hpp  pbPlotter.cpp  pbPlotter.h  supportLib.cpp  supportLib.hpp
src/pmq/: pmq.cpp  pmq.h
src/point/: point.cpp  point.hpp
src/q_digest/: q_digest.cpp  q_digest.h
src/q_digest_factory/: q_digest_factory.h
src/qsbd_debug/: qsbd_debug.h
src/quadtree/: quadtree.cpp  quadtree.h
src/quantile_quadtree/: quantile_quadtree.hpp
src/quantile_sketch/: quantile_sketch.hpp
src/sketch_factory/: sketch_factory.hpp
src/stl_memory_tracker/: stl_memory_tracker.hpp
src/stream_maker/: stream_maker.cpp  stream_maker.h
src/timer/: timer.cpp  timer.h
src/two_wise_family/: two_wise_family.cpp  two_wise_family.h
src/utils/: utils.cpp  utils.h
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  test_config.cpp  test_count_sketch.cpp  test_dcs.cpp  test_gk.cpp  test_json.cpp  test_k_wise_family.cpp  test_kll.cpp  test_kolmogorov.cpp  test_log.cpp  test_memory_tracker.cpp  test_pbplotter.cpp  test_q_digest.cpp  test_quadtree.cpp  test_quantile_quadtree.cpp  test_stream_maker.cpp  test_timer.cpp  tester.cpp
(+10 files in other folders)
